--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -5,4 +5,6 @@ html(lang="en")
     link(rel='stylesheet', href='/styles/main.css')
   body
     block content
+    script(src='/scripts/main.js')
+
 
