--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,5 +1,6 @@
 
 @import (inline) "normalize.css/normalize.css";
+@import (inline) "bootstrap/dist/css/bootstrap.css";
 
 body {
   background-color: azure;
