added gulp-minify-css and gulp-rename

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title Yo! Gulp Less Jade
-    link(rel='stylesheet', href='/styles/main.css')
+    link(rel='stylesheet', href='/styles/main.min.css')
   body
     block content
     script(src='/scripts/main.js')
