--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -5,6 +5,6 @@ html(lang="en")
     link(rel='stylesheet', href='/styles/main.min.css')
   body
     block content
-    script(src='/scripts/main.js')
+    script(src='/scripts/main.min.js')
 
 
