--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -1,10 +1,10 @@
 doctype html
 html(lang="en")
   head
-    title Yo! Gulp Less Jade
-    link(rel='stylesheet', href='/styles/main.min.css')
+    title Justin Hardin
+    link(rel='stylesheet', href='/styles/main.css')
   body
     block content
-    script(src='/scripts/main.min.js')
+    script(src='/scripts/main.js')
 
 
