Created two separate gulp tasks for dependencies and app js to decrease change refresh time.

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -5,6 +5,7 @@ html(lang="en")
     link(rel='stylesheet', href='/styles/main.css')
   body
     block content
-    script(src='/scripts/main.js')
+    script(src='/scripts/dep.js')
+    script(src='/scripts/app.js')
 
 
