--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -12,3 +12,6 @@ block content
           li: a(href="#") Get in Touch
           li: a(href="#") Blog
       a.toggle-nav(href="#")&#9776; 
+  .poly
+  .hero
+    
