--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -12,6 +12,10 @@ block content
           li: a(href="#") Get in Touch
           li: a(href="#") Blog
       a.toggle-nav(href="#")&#9776; 
-  .poly
-  .hero
+  .hero-wrapper  
+    .hero-img
+      .container.title-wrapper 
+        h1 Justin Hardin
+        h2 UI Engineer
+    //.poly
     
