--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,7 @@ body {
   font-family: 'Circular Std Black';
   font-weight: normal;
   color: #968870; }
+
+.container {
+  width: 940px;
+  margin: 0 auto; }
