--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,9 @@
   font-weight: normal;
   src: local("Circular Std Medium Italic"), url("fonts/CircularStd-MediumItalic.woff") format("woff"); }
 
+*, :after, :before, html {
+  box-sizing: border-box; }
+
 html, body {
   width: 100%;
   height: 100%; }
@@ -54,6 +57,9 @@ body {
   font-family: 'Circular Std Black';
   font-weight: normal;
   color: #968870; }
+
+a {
+  text-decoration: none; }
 
 .container {
   width: 940px;
