--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
 @import 'fonts/fonts.scss';
 @import './variables.scss';
 
+*, :after, :before, html {
+  box-sizing: border-box;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -10,6 +14,10 @@ body {
   font-family: 'Circular Std Black';
   font-weight: normal;
   color: $gold;
+}
+
+a {
+  text-decoration: none;
 }
 
 .container {
