--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,12 @@ a {
   text-decoration: none;
 }
 
+button {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .container {
   width: 940px;
   margin: 0 auto;
