--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -7,6 +7,7 @@ header {
     padding-top: 70px;
     margin-bottom: 130px;
     .logo {
+      z-index: 3;
       a {
         text-decoration: none;
         color: $gold;
@@ -23,8 +24,9 @@ header {
       width: 24px;
       height: 14px;
       transform: rotate(0deg);
-      transition: .5s ease-in-out;
+      transition: .3s ease-in-out;
       cursor: pointer;
+      z-index: 3;
       span {
         display: block;
         position: absolute;
@@ -34,18 +36,48 @@ header {
         opacity: 1;
         left: 0;
         transform: rotate(0deg);
-        transition: .25s ease-in-out;
+        transition: .2s ease-in-out;
+        transform-origin: left center;
         &:nth-child(1) {
           top: 0px;
         }
         &:nth-child(2) {
-          top: 5px;
+          top: 6px;
         }
         &:nth-child(3) {
-          top: 11px;
+          top: 12px;
         }
 
-
+      }
+      &:hover {
+        span {
+          &:nth-child(1) {
+            // top: 0px;
+            transform: translateY(-2px);
+          }
+          &:nth-child(2) {
+            // top: 8px;
+          }
+          &:nth-child(3) {
+            transform: translateY(2px);
+          }
+        }
+      }
+      &.isOpen {
+        span {
+          &:nth-child(1) {
+            transform: rotate(45deg);
+            top: 0px;
+          }
+          &:nth-child(2) {
+            width: 0%;
+            opacity: 0;
+          }
+          &:nth-child(3) {
+            transform: rotate(-45deg);
+            top: 16px;
+          }
+        }
       }
     }
   }
