--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,15 @@ ul {
 .container {
   width: 940px;
   margin: 0 auto; }
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1170px; } }
+
+@media (max-width: 979px) and (min-width: 768px) {
+  .container {
+    width: 724px; } }
+
+@media (max-width: 767px) {
+  .container {
+    width: 85%; } }
