--- a/src/App.scss
+++ b/src/App.scss
@@ -34,3 +34,19 @@ ul {
   width: 940px;
   margin: 0 auto;
 }
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+@media (max-width: 979px) and (min-width: 768px) {
+  .container {
+    width: 724px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    width: 85%;
+  }
+}
