--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -6,6 +6,19 @@
     font-size: 48px;
     margin-bottom: 20px;
     width: 84%;
+    letter-spacing: 0px;
+  }
+  @media (max-width: 979px) and (min-width: 768px) {
+    h1 {
+      font-size: 44px;
+    }
+  }
+  @media (max-width: 767px) {
+    margin-bottom: 65px;
+    h1 {
+      font-size: 40px;
+      width: 100%;
+    }
   }
 }
 
@@ -29,14 +42,12 @@
 
 .projects {
   margin-bottom: 151px;
-  .row {
-    margin-bottom: 16px;
-  }
   .project-thumb {
      height: 175px;
      position: relative;
      background-color: $black-grey;
      overflow: hidden;
+    margin-bottom: 16px;
      .thumb-inner{
        position: relative;
        height: 100%;
@@ -73,5 +84,8 @@
          opacity: 1;
        }
      }
+  }
+  @media (max-width: 767px) {
+    margin-bottom: 44px;
   }
 }
