--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,9 @@ ul {
   width: 940px;
   margin: 0 auto; }
 
+.res-img {
+  width: 100%; }
+
 @media screen and (min-width: 1200px) {
   .container {
     width: 1170px; } }
