--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -4,6 +4,7 @@
   margin-bottom: 151px;
   h1 {
     font-size: 48px;
+    margin-top: 93px;
     margin-bottom: 20px;
     width: 84%;
     letter-spacing: 0px;
@@ -16,6 +17,7 @@
   @media (max-width: 767px) {
     margin-bottom: 65px;
     h1 {
+      margin-top:48px;
       font-size: 40px;
       width: 100%;
     }
