--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -77,7 +77,9 @@
        img {
          width: 100%;
          opacity: 0.8;
+         object-fit: cover;
          height: auto;
+         object-position: center;
        }
      }
      &:hover {
