--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -2,10 +2,11 @@
 
 .title {
   margin-bottom: 151px;
+  margin-top: 93px;
   h1 {
+    margin-top: 0px;
+    margin-bottom: 0px;
     font-size: 48px;
-    margin-top: 93px;
-    margin-bottom: 20px;
     width: 84%;
     letter-spacing: 0px;
   }
@@ -17,10 +18,15 @@
   @media (max-width: 767px) {
     margin-bottom: 65px;
     h1 {
-      margin-top:48px;
       font-size: 40px;
       width: 100%;
     }
+  }
+  a {
+    color: #86e1ff;
+  }
+  .btn-wrapper {
+    margin-top: 43px;
   }
 }
 
@@ -39,6 +45,11 @@
     font-size: 15px;
     line-height: 27px;
     vertical-align: baseline;
+    &:hover {
+      background-color: $gold;
+      color: white;
+      transition: all .3s ease;
+    }
   }
 }
 
